trunk/Archive2/1a/9c28c27780c9a8/output
main.cpp: In function 'ana':
main.cpp:6:5: error: stray '\303' in program
     time_t çağın =  0 ; 
     ^
main.cpp:6:5: error: stray '\247' in program
main.cpp:6:5: error: stray '\304' in program
main.cpp:6:5: error: stray '\237' in program
main.cpp:6:5: error: stray '\304' in program
main.cpp:6:5: error: stray '\261' in program
main.cpp:6:5: error: ISO C forbids nested functions [-Wpedantic]
main.cpp:6:19: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'n'
     time_t çağın =  0 ; 
                   ^
main.cpp:6:19: error: 'n' undeclared (first use in this function)
main.cpp:6:19: note: each undeclared identifier is reported only once for each function it appears in
main.cpp:7:14: error: unknown escape sequence: '\040'
     printf ( "% ld saniye dönem başladığından beri \ n " , ( uzun ) dönem ) ; 
              ^
main.cpp:7:67: error: 'uzun' undeclared (first use in this function)
     printf ( "% ld saniye dönem başladığından beri \ n " , ( uzun ) dönem ) ; 
                                                                   ^
main.cpp:7:74: error: expected ')' before 'd'
     printf ( "% ld saniye dönem başladığından beri \ n " , ( uzun ) dönem ) ; 
                                                                          ^
main.cpp:7:74: error: stray '\303' in program
main.cpp:7:74: error: stray '\266' in program
main.cpp:8:41: error: 've' undeclared (first use in this function)
     printf ( "% s" , asctime ( gmtime ( ve dönem ) ) ) ; 
                                         ^
main.cpp:8:44: error: expected ')' before 'd'
     printf ( "% s" , asctime ( gmtime ( ve dönem ) ) ) ; 
                                            ^
main.cpp:8:44: error: stray '\303' in program
main.cpp:8:44: error: stray '\266' in program
main.cpp:9:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
